--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <div class="reveal">
     <div class="slides">
 
+      <!-- Title Slide -->
       <section>
         <h1>Quarterly Earnings Report</h1>
         <h3>Technical consultant presentation</h3>
@@ -38,6 +39,13 @@
         </aside>
       </section>
 
+      <!-- REQUIRED EMAIL SLIDE (Fixes the error) -->
+      <section>
+        <h2>Contact Information</h2>
+        <p>Email: <strong>24f2005641@ds.study.iitm.ac.in</strong></p>
+      </section>
+
+      <!-- Markdown Slide -->
       <section data-markdown>
         <textarea data-template>
 ## Highlights — Q1
@@ -56,6 +64,7 @@
         </aside>
       </section>
 
+      <!-- Fragments Slide -->
       <section>
         <h2>Key Metrics</h2>
         <ul>
@@ -68,6 +77,7 @@
         </aside>
       </section>
 
+      <!-- Math Slide -->
       <section>
         <h2>Valuation Example</h2>
         <p>Present Value (discounted cash flows):</p>
@@ -78,6 +88,7 @@
         </aside>
       </section>
 
+      <!-- Code Highlighting Slide -->
       <section>
         <h2>Sample: Calculating NPV (Python)</h2>
         <pre><code class="language-python">
@@ -96,6 +107,7 @@ print(npv(cashflows, 0.08))
         </aside>
       </section>
 
+      <!-- Fragments Slide -->
       <section>
         <h2>Driver Analysis</h2>
         <p class="fragment">Driver 1: Volume rise (+5%)</p>
@@ -106,6 +118,7 @@ print(npv(cashflows, 0.08))
         </aside>
       </section>
 
+      <!-- Final Slide -->
       <section>
         <h2>Thank you</h2>
         <p>Questions?</p>
