--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11/styles/default.min.css">
 
   <style>
-    .footer-email { position: absolute; right: 1rem; bottom: 0.6rem; font-size: 0.8rem; opacity: 0.8; }
+    .footer-email {
+      position: absolute;
+      right: 1rem;
+      bottom: 0.6rem;
+      font-size: 0.8rem;
+      opacity: 0.8;
+    }
     pre code { font-size: 0.85rem; }
   </style>
 </head>
 <body>
-
-  <!-- VALIDATOR-FRIENDLY EMAIL (outside RevealJS) -->
-  <p>Email: <strong>24f2005641@ds.study.iitm.ac.in</strong></p>
 
   <div class="reveal">
     <div class="slides">
@@ -29,19 +32,20 @@
         <p class="footer-email">Contact: 24f2005641@ds.study.iitm.ac.in</p>
       </section>
 
-      <section>
-        <h2>Contact Information</h2>
-        <p>Email: <strong>24f2005641@ds.study.iitm.ac.in</strong></p>
-      </section>
-
+      <!-- FIX: EMAIL ADDED INSIDE MARKDOWN SLIDE -->
       <section data-markdown>
         <textarea data-template>
 ## Highlights — Q1
+
 - Revenue up **8%** YoY
 - Operating margin improved from *12%* to *14%*
 - Key drivers:
   - Increased transaction volumes
   - Cost optimization
+
+### Contact Email  
+**24f2005641@ds.study.iitm.ac.in**
+
         </textarea>
       </section>
 
@@ -55,12 +59,12 @@
       </section>
 
       <section>
-        <h2>Valuation Formula</h2>
+        <h2>Valuation Example</h2>
         <p>\( PV = \sum_{t=1}^{N} \frac{CF_t}{(1+r)^t} \)</p>
       </section>
 
       <section>
-        <h2>Python Code Example</h2>
+        <h2>Python Example</h2>
         <pre><code class="language-python">
 def npv(cashflows, r):
     pv = 0
@@ -71,7 +75,7 @@ def npv(cashflows, r):
       </section>
 
       <section>
-        <h2>Driver Analysis</h2>
+        <h2>Drivers</h2>
         <p class="fragment">Driver 1: +5%</p>
         <p class="fragment">Driver 2: +2%</p>
         <p class="fragment">Driver 3: -1%</p>
