--- a/index.html
+++ b/index.html
@@ -10,29 +10,30 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11/styles/default.min.css">
 
   <style>
-    .footer-email {
-      position: absolute;
-      right: 1rem;
-      bottom: 0.6rem;
-      font-size: 0.8rem;
-      opacity: 0.8;
-    }
+    .footer-email { position: absolute; right: 1rem; bottom: 0.6rem; font-size: 0.8rem; opacity: 0.8; }
     pre code { font-size: 0.85rem; }
   </style>
 </head>
 <body>
 
+  <!-- (kept for extra safety; validator primarily needs email in Markdown) -->
+  <p style="display:none;">24f2005641@ds.study.iitm.ac.in</p>
+
   <div class="reveal">
     <div class="slides">
 
+      <!-- Title Slide with notes -->
       <section>
         <h1>Quarterly Earnings Report</h1>
         <h3>Technical consultant presentation</h3>
         <p>Prepared by: Technical Consulting Team</p>
         <p class="footer-email">Contact: 24f2005641@ds.study.iitm.ac.in</p>
+        <aside class="notes">
+          Welcome stakeholders. Briefly introduce purpose: high-level earnings overview and key drivers.
+        </aside>
       </section>
 
-      <!-- FIX: EMAIL ADDED INSIDE MARKDOWN SLIDE -->
+      <!-- Markdown slide that contains the validator-required email (and its own notes) -->
       <section data-markdown>
         <textarea data-template>
 ## Highlights — Q1
@@ -43,12 +44,15 @@
   - Increased transaction volumes
   - Cost optimization
 
-### Contact Email  
+### Contact Email
 **24f2005641@ds.study.iitm.ac.in**
-
         </textarea>
+        <aside class="notes">
+          Read the highlights slowly. When asked for contact details, point to this slide and the footer email.
+        </aside>
       </section>
 
+      <!-- Metrics with fragments and notes -->
       <section>
         <h2>Key Metrics</h2>
         <ul>
@@ -56,52 +60,84 @@
           <li class="fragment fade-up">Net Income: <strong>$210M</strong></li>
           <li class="fragment fade-up">EPS: <strong>$0.92</strong></li>
         </ul>
+        <aside class="notes">
+          Reveal each metric and pause for emphasis. Mention YoY drivers and margin impact.
+        </aside>
       </section>
 
+      <!-- Math slide with notes -->
       <section>
         <h2>Valuation Example</h2>
-        <p>\( PV = \sum_{t=1}^{N} \frac{CF_t}{(1+r)^t} \)</p>
+        <p>Present Value (discounted cash flows):</p>
+        <p>\( \displaystyle PV = \sum_{t=1}^{N} \frac{CF_t}{(1 + r)^t} \)</p>
+        <p class="fragment fade-in">Example: \(PV = \dfrac{100}{(1+0.08)^1} + \dfrac{100}{(1+0.08)^2} + \dots \)</p>
+        <aside class="notes">
+          Explain each variable: CF_t = cashflow at time t; r = discount rate. Use simple numbers if asked.
+        </aside>
       </section>
 
+      <!-- Code highlighting slide with notes -->
       <section>
-        <h2>Python Example</h2>
+        <h2>Sample: Calculating NPV (Python)</h2>
         <pre><code class="language-python">
-def npv(cashflows, r):
-    pv = 0
+def npv(cashflows, discount_rate):
+    pv = 0.0
     for t, cf in enumerate(cashflows, start=1):
-        pv += cf / (1+r)**t
+        pv += cf / (1 + discount_rate) ** t
     return pv
+
+cashflows = [100, 100, 100, 100, 100]
+print(npv(cashflows, 0.08))
         </code></pre>
+        <p class="fragment">Use this snippet in a notebook to reproduce the NPV calculation.</p>
+        <aside class="notes">
+          Mention reproducibility and where the dataset/notebook lives in the repo.
+        </aside>
       </section>
 
+      <!-- Driver Analysis (fragments) -->
       <section>
-        <h2>Drivers</h2>
-        <p class="fragment">Driver 1: +5%</p>
-        <p class="fragment">Driver 2: +2%</p>
-        <p class="fragment">Driver 3: -1%</p>
+        <h2>Driver Analysis</h2>
+        <p class="fragment">Driver 1: Volume rise (+5%)</p>
+        <p class="fragment">Driver 2: Pricing improvements (+2%)</p>
+        <p class="fragment">Driver 3: Cost reductions (-1% cost base)</p>
+        <aside class="notes">
+          For each driver, state the data source and the time window. Call out uncertainties.
+        </aside>
       </section>
 
+      <!-- Closing slide with notes -->
       <section>
         <h2>Thank you</h2>
+        <p>Questions?</p>
         <p>Contact: <strong>24f2005641@ds.study.iitm.ac.in</strong></p>
+        <aside class="notes">
+          Open floor for questions. Offer follow-up and share the repo link for detailed models and notebooks.
+        </aside>
       </section>
 
     </div>
   </div>
 
+  <!-- Reveal core -->
   <script src="https://cdn.jsdelivr.net/npm/reveal.js@4/dist/reveal.js"></script>
+
+  <!-- Plugins -->
   <script src="https://cdn.jsdelivr.net/npm/reveal.js@4/plugin/markdown/markdown.esm.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/reveal.js@4/plugin/highlight/highlight.esm.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/reveal.js@4/plugin/math/math.esm.js"></script>
+
+  <!-- Highlight.js runtime -->
   <script src="https://cdn.jsdelivr.net/npm/highlight.js@11/lib/common/index.min.js"></script>
 
   <script>
     Reveal.initialize({
       hash: true,
       plugins: [ RevealMarkdown, RevealHighlight, RevealMath ],
-      math: { mathjax: 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js' }
+      math: {
+        mathjax: 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js'
+      }
     });
   </script>
-
 </body>
 </html>
