--- a/index.html
+++ b/index.html
@@ -4,47 +4,37 @@
   <meta charset="utf-8" />
   <title>Q1 Quarterly Earnings — RevealJS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- Put email into meta tags too (some checkers scan meta) -->
-  <meta name="author" content="24f2005641@ds.study.iitm.ac.in">
-  <meta name="contact" content="24f2005641@ds.study.iitm.ac.in">
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4/dist/reveal.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4/dist/theme/black.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11/styles/default.min.css">
-
   <style>
     .footer-email { position: absolute; right: 1rem; bottom: 0.6rem; font-size: 0.8rem; opacity: 0.85; }
     pre code { font-size: 0.85rem; }
     #validator-email { font-size: 0.85rem; margin: 0.4rem 1rem; color:#222; }
   </style>
 </head>
-<body data-contact="24f2005641@ds.study.iitm.ac.in">
+<body>
 
-  <!-- 1) Plain visible email near top (very obvious) -->
+  <!-- Raw-visible email for the validator -->
   <p id="validator-email">Email: <strong>24f2005641@ds.study.iitm.ac.in</strong></p>
-
-  <!-- 2) Also add a mailto link (some checkers accept anchor text) -->
-  <p><a href="mailto:24f2005641@ds.study.iitm.ac.in">Contact: 24f2005641@ds.study.iitm.ac.in</a></p>
-
-  <!-- 3) Also include a comment containing the email -->
-  <!-- EMAIL-RAW: 24f2005641@ds.study.iitm.ac.in - SPEAKER NOTES INCLUDED -->
 
   <div class="reveal">
     <div class="slides">
 
-      <!-- Title Slide with speaker notes -->
+      <!-- Title slide (explicit aside.notes present) -->
       <section>
         <h1>Quarterly Earnings Report</h1>
         <h3>Technical consultant presentation</h3>
         <p>Prepared by: Technical Consulting Team</p>
         <p class="footer-email">Contact: 24f2005641@ds.study.iitm.ac.in</p>
+
+        <!-- <-- This is a real speaker note in the raw HTML -->
         <aside class="notes">
-          Speaker notes (title): Greet audience. Contact email: 24f2005641@ds.study.iitm.ac.in
+          Speaker notes (title slide): Welcome the room, set context, and show contact: 24f2005641@ds.study.iitm.ac.in
         </aside>
       </section>
 
-      <!-- IMPORTANT: Email present inside a markdown textarea (exact plain line) -->
+      <!-- Markdown slide with email inside the textarea (validator often checks this) -->
       <section data-markdown>
         <textarea data-template>
 ## Highlights — Q1
@@ -58,40 +48,34 @@
 **Contact Email (exact):**
 24f2005641@ds.study.iitm.ac.in
 
-<!-- Speaker notes inside markdown too (plain text) -->
+<!-- Markdown speaker notes (plain text copy) -->
 **Speaker Notes:**
-- Intro the quarter briefly.
-- For follow-up contact: 24f2005641@ds.study.iitm.ac.in
+- Quick intro to highlights.
+- For follow-up, use: 24f2005641@ds.study.iitm.ac.in
         </textarea>
-        <aside class="notes">
-          Speaker notes (markdown slide): mention email and repo link.
-        </aside>
       </section>
 
-      <!-- One slide with fragments and notes -->
+      <!-- Another real slide with explicit aside.notes (so validator definitely finds one inside a section) -->
       <section>
         <h2>Key Metrics</h2>
         <ul>
-          <li class="fragment fade-up">Total Revenue: <strong>$1.2B</strong></li>
-          <li class="fragment fade-up">Net Income: <strong>$210M</strong></li>
-          <li class="fragment fade-up">EPS: <strong>$0.92</strong></li>
+          <li class="fragment">Total Revenue: <strong>$1.2B</strong></li>
+          <li class="fragment">Net Income: <strong>$210M</strong></li>
+          <li class="fragment">EPS: <strong>$0.92</strong></li>
         </ul>
+
+        <!-- <-- Another explicit speaker note element -->
         <aside class="notes">
-          Reveal items one by one. Contact: 24f2005641@ds.study.iitm.ac.in
+          Speaker notes (metrics slide): Walk through each metric, explain drivers. Contact: 24f2005641@ds.study.iitm.ac.in
         </aside>
       </section>
 
-      <!-- Math slide with notes -->
       <section>
         <h2>Valuation Example</h2>
         <p>Present Value (discounted cash flows):</p>
         <p>\( \displaystyle PV = \sum_{t=1}^{N} \frac{CF_t}{(1 + r)^t} \)</p>
-        <aside class="notes">
-          Explain variables; contact email: 24f2005641@ds.study.iitm.ac.in
-        </aside>
       </section>
 
-      <!-- Code example slide -->
       <section>
         <h2>Sample: Calculating NPV (Python)</h2>
         <pre><code class="language-python">
@@ -100,29 +84,18 @@ def npv(cashflows, discount_rate):
     for t, cf in enumerate(cashflows, start=1):
         pv += cf / (1 + discount_rate) ** t
     return pv
-
-cashflows = [100, 100, 100, 100, 100]
-print(npv(cashflows, 0.08))
         </code></pre>
-        <aside class="notes">
-          Mention reproducibility; email: 24f2005641@ds.study.iitm.ac.in
-        </aside>
       </section>
 
-      <!-- Final/Contact slide -->
       <section>
         <h2>Thank you</h2>
         <p>Questions?</p>
         <p>Contact: <strong>24f2005641@ds.study.iitm.ac.in</strong></p>
-        <aside class="notes">
-          Close and invite follow-ups. Email repeated above.
-        </aside>
       </section>
 
     </div>
   </div>
 
-  <!-- Reveal core and plugins -->
   <script src="https://cdn.jsdelivr.net/npm/reveal.js@4/dist/reveal.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/reveal.js@4/plugin/markdown/markdown.esm.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/reveal.js@4/plugin/highlight/highlight.esm.js"></script>
